# trackingContextBuilder

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup_env.sh
notebooks/: .gitkeep  trackingContextBuilderExtraction.ipynb  trackingContextBuilderExtractionCarrierCustomerLevel.ipynb  trackingContextBuilderExtractionUpdated.ipynb  trackingContextBuilderExtractionUpdatedCustomer.ipynb
scripts/: __init__.py
scripts/data_preparation/: __init__.py  load.py
scripts/model_training/: __init__.py
sql/: EmailExtractionToContextBuilder.sql  loadNumbertoReferenceNumMatching.sql
trackingContextBuilder/: __init__.py
