[project]
name = "trackingContextBuilder"
version = "1.0.0"
description = "A machine learning pipeline built with Apache Airflow for automated data preparation, model training, and deployment"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "vugtlan", email = "vugltan@chrobinson.com" }
]

dependencies = [
    # Apache Airflow
    "apache-airflow==2.8.1",
    "apache-airflow-providers-common-sql==1.10.0",
    "apache-airflow-providers-snowflake==5.1.0",  # Compatible with Airflow 2.8.1
    
    # Azure Authentication
    "azure-identity>=1.15.0",
    
    # Data Processing
    "pandas==2.1.4",
    "numpy==1.26.3",
    "scikit-learn==1.4.0",
    
    # Database Connections
    "sqlalchemy>=1.4.28,<2.0",  # Compatible with Airflow 2.8.1
    "psycopg2-binary==2.9.9",
    "snowflake-connector-python>=3.7.0",  # Compatible with providers 5.1.0
    "snowflake-sqlalchemy>=1.4.0,<1.7.0",  # Compatible with providers 5.1.0
    
    # Machine Learning
    "xgboost==2.0.3",
    "lightgbm==4.3.0",
    "catboost==1.2.2",
    
    # Model Persistence
    "joblib==1.3.2",
    "pickle5==0.0.11",
    
    # Jupyter for Notebooks
    "jupyter==1.0.0",
    "ipykernel==6.29.0",
    "notebook==7.0.7",
    
    # Visualization
    "matplotlib==3.8.2",
    "seaborn==0.13.1",
    "plotly==5.18.0",
    
    # Utilities
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "click==8.1.7",
    "pydantic-settings>=2.0.0",
    
    # HTML/Text Processing
    "beautifulsoup4==4.12.3",
    "lxml==5.1.0",
    
    # Testing
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    
    # Code Quality
    "black==24.1.1",
    "flake8==7.0.0",
    "pylint==3.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trackingContextBuilder", "scripts", "dags"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=scripts --cov-report=term-missing"

[tool.pylint.messages_control]
disable = ["C0111", "C0103"]

[tool.pylint.format]
max-line-length = 88
